--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,10 @@ body {
     margin:0;
 }
 
+.about-me-story-img {
+    width:96px;
+}
+
 .about-me-story-container {
     display: flex;
     align-items: center;
@@ -100,13 +104,17 @@ body {
 
 .skill-card {
     background-color: #21201D;
-    width:200px;
+    width:15%;
     height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     flex-direction: column;
+}
+
+.skill-card img {
+    width:50%;
 }
 
 .skill-card span {
@@ -119,7 +127,8 @@ body {
 }
 
 .works-text {
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 30px;
     font-family: 'Inconsolata', monospace;
     font-size: 32px;
     font-weight: 700;
@@ -127,4 +136,220 @@ body {
     width:100%;
     color:rgba(255,131,3,1);
 
+}
+
+.work-card {
+    position: relative;
+    width:27%;
+    height: 320px;
+    left:0;
+    display: flex;
+}
+.work-main {
+    width:100%;
+    position: relative;
+    justify-content: space-between;
+    margin-left:0px;
+}
+
+.work-text {
+    position: absolute;
+    left:0;
+    width:100%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+}
+
+
+.work-text-line {
+    width: 200px;
+    border: 1px solid #A35709;
+}
+
+.work-text-1 {
+    font-family: 'Inconsolata', monospace;
+    font-size: 32px;
+    font-weight: 700;
+    text-align: center;
+    color:rgba(255, 131, 3, 1);
+}
+
+.work-text-2 {
+    font-family: 'Inconsolata', monospace;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+color: #F0E3CA;
+text-transform: uppercase;
+}
+
+.work-text-4 {
+    font-family: 'Inconsolata', monospace;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 17px;
+    width:200px;
+    
+    color: #F0E3CA;
+}
+
+.work-text-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Inconsolata', monospace;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    color: rgba(240, 227, 202, 1);
+width:110px;
+height: 40px;
+background-color: rgba(50, 49, 46, 1);
+}
+
+.footer-col-text-1 {
+    font-family: 'Inconsolata';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 21px;
+
+color: #F0E3CA;
+padding-top:20px;
+}
+
+.footer-col-text-2 {
+    font-family: 'Inconsolata';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 34px;
+
+color: #FF8303;
+
+}
+
+.footer-col-text-mail {
+    font-family: 'Inconsolata';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 25px;
+
+color: #FF8303;
+}
+
+.footer-col-text-git {
+    font-family: 'Inconsolata';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 25px;
+
+color: #FF8303;
+align-items: center;
+
+}
+
+.footer-col-text-git img {
+    width:32px;
+}
+
+footer {
+    padding-top:100px;
+}
+
+
+@media (max-width:576px) {
+
+    .about-me-info {
+        padding-top: 150px;
+    }
+
+    .about-me-info-1 {
+        font-size:48px;
+    }
+
+    .about-me-info-2 {
+        font-size: 32px;
+    }
+
+    .about-me-info-3 {
+        font-size:16px;
+    }
+
+    .about-me-code-bg {
+        padding-top: 50px;
+        padding-left: 100px;
+        font-size:14px;
+    }
+
+    .about-me-code-bg img {
+        width:100%;
+    }
+
+    .about-me-story {
+        font-size:16px;
+    }
+
+    .about-me-story-img {
+        width: 64px;
+    }
+
+    .cards {
+        flex-wrap: wrap;
+        justify-content: center;
+        flex-direction: row;
+        
+    }
+
+    .skill-card { 
+        padding: 100px;
+    }
+
+    .work-card {
+        width: 100%;
+        margin-bottom:20px;
+    }
+
+    .work-main {
+        width:100%;
+        display: flex; 
+        justify-content: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        left:0;
+        padding-top:20px;
+    }
+
+    .footer-main {
+        padding-top:0;
+    }
+}
+
+@media (min-width:577px) and (max-width:1024px) {
+    .about-me-story {
+        font-size:20px;
+    }
+
+    .skill-card {
+        width:15%;
+        height:200px;
+        border-radius: 10%;
+    }
+
+    .skill-card img {
+        width:64px;
+    }
+
+    .skill-card span {
+        font-size:24px;
+    }
 }
